--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -6,3 +6,12 @@ inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
 # Layout/SpaceInsideArrayLiteralBrackets:
 #   Enabled: false
+
+Layout/TrailingEmptyLines:
+  Enabled: false
+Layout/SpaceBeforeComma:
+  Enabled: false
+Layout/TrailingWhitespace:
+  Enabled: false
+Style/StringLiterals:
+  Enabled: false
